--- a/public/blogs/Homework1_wine.Rmd
+++ b/public/blogs/Homework1_wine.Rmd
@@ -1,15 +1,18 @@
 ---
-title: "Top 25 Countries that consume wine, beer and spirits"
-author: "Study Group 36B: Doris Jiang, Marc Brothier, Max Clark, Konstantin Pinkl,                 Simon Yang, Viktor Nave"
-date: "27-Sep-2020"
-output:
-  html_document:
-    theme: flatly
-    highlight: zenburn
-    number_sections: yes
-    toc: yes
-    toc_float: yes
-    code_folding: show
+title: "Boris Bike Stats"
+output: html_document
+---
+---
+categories:
+- ""
+- ""
+date: "2017-10-31T21:28:43-05:00"
+description: ""
+draft: false
+image: pic10.jpg
+keywords: ""
+slug: Drinks
+title: Ipsum
 ---
 
 ```{r, setup}
